--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^7.21.1",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
