--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-screens": "~2.10.1",
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.1",
+    "react-navigation-tabs": "^2.9.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
