--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/compat": "^5.2.6",
+    "@react-navigation/native": "^5.7.4",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "firebase": "^7.21.1",
