--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/compat": "^5.2.6",
     "@react-navigation/native": "^5.7.4",
     "expo": "^39.0.3",
@@ -22,10 +23,12 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-screens": "~2.10.1",
     "react-native-search-bar": "^3.5.1",
+    "react-native-stack": "^1.0.0-alpha11",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.1",
+    "react-navigation-stack": "^2.8.3",
     "react-navigation-tabs": "^2.9.1"
   },
   "devDependencies": {
