--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-complete-flatlist": "^2.0.3",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "^1.13.1",
