--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "packagerOpts": {
+      "config": "./rn-cli.config.js"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
