--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/compat": "^5.2.6",
     "@react-navigation/native": "^5.7.4",
@@ -24,6 +25,7 @@
     "react-native-elements": "^2.3.2",
     "react-native-form-select-picker": "0.0.9",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-icon-checkbox": "^1.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-screens": "~2.10.1",
     "react-native-search-bar": "^3.5.1",
